# so-shifts-supsci

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
docs/: README.md  algorithm.md  architecture.md  decisions.md  fte-weighting.md  overview.md  requirements-and-data-model.md  rules-and-objectives.md  sheet-integration.md  status.md
shift_proposer/: __init__.py  cli.py  config.py  models.py
shift_proposer/engine/: __init__.py  blocks.py  eligibility.py  greedy.py  report.py  scoring.py  tallies.py
shift_proposer/io/: __init__.py  fte.py  parser.py  sheets.py
shift_proposer/output/: __init__.py  proposal.py  report.py  writeback.py
tests/: test_blocks.py  test_cli.py  test_eligibility.py  test_fte.py  test_greedy.py  test_models.py  test_parser.py  test_proposal_output.py  test_report.py  test_scoring.py  test_sheets.py  test_tallies.py  test_writeback.py
