[project]
name = "shift-calendar-proposal-generator"
version = "0.1.0"
description = "Reads the SupSci availability spreadsheet and produces a proposed shift calendar for review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.0",
    "google-auth-oauthlib>=1.2",
    "pandas>=2.0",
]

[project.scripts]
shift-proposer = "shift_proposer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shift_proposer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
